tensorflow js init

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ deep-learning/mnist/mnist/mnist_convnet_model/
 *.user
 
 deep-learning/\.vs/deep-learning/v15/\.suo
+
+deep-learning/**/node_modules/
+deep-learning/**/dist/
+deep-learning/**/package-lock.json
